objects/BMCServiceDesk__WebAPIJob__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__FailedResponse__c</fullName>
        <inlineHelpText>This field stores service response if a request fails.</inlineHelpText>
        <label>Failed Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RetryCount__c</fullName>
        <inlineHelpText>Number of times a failed request can be called.</inlineHelpText>
        <label>Retry Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <inlineHelpText>Stores the current status of an API job.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__SuccessResponse__c</fullName>
        <inlineHelpText>This field stores service response if a request is successful.</inlineHelpText>
        <label>Success Response</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Task__c</fullName>
        <inlineHelpText>Specifies the task to which the API job is associated.</inlineHelpText>
        <label>Task</label>
        <referenceTo>BMCServiceDesk__Task__c</referenceTo>
        <relationshipLabel>Web API Jobs</relationshipLabel>
        <relationshipName>WebAPI_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__WebAPIConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Specifies the  web API configuration to which the API job is associated.</inlineHelpText>
        <label>Web API Configuration</label>
        <referenceTo>BMCServiceDesk__WebAPIConfiguration__c</referenceTo>
        <relationshipLabel>Web API Jobs</relationshipLabel>
        <relationshipName>WebAPI_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>